[package]
name = "babel_coder"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
scraper = "0.25.0"
hex = "0.4.3"
inquire = "0.9.3"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
copypasta = "0.10.2"
serde = { version = "1.0.228", features = [
  "derive",
] } # Добавь это на всякий случай
